--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Build Zig statically with musl for ARM64
         run: |
           export PATH="/opt/musl-cross/bin:$PATH"
+          export CC=/opt/musl-cross/aarch64-linux-musl/bin/aarch64-linux-musl-gcc
+          export CXX=/opt/musl-cross/aarch64-linux-musl/bin/aarch64-linux-musl-g++
+
           mkdir build
           cd build
           cmake .. \
