--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -42,6 +42,7 @@ jobs:
             -DCMAKE_SYSTEM_NAME=Linux \
             -DCMAKE_SYSTEM_PROCESSOR=aarch64 \
             -DCMAKE_C_COMPILER=aarch64-linux-musl-gcc \
+            -DCMAKE_CXX_COMPILER=aarch64-linux-musl-g++ \
             -DCMAKE_EXE_LINKER_FLAGS="-static" \
             -DZIG_STATIC=ON \
             -DCMAKE_BUILD_TYPE=Release
