--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -29,10 +29,11 @@ jobs:
           echo "OUTPUT = /opt/musl-cross" >> config.mak
           make -j$(nproc)
           echo "/opt/musl-cross/bin" >> $GITHUB_PATH
+          tree -a /opt/musl-cross/bin
 
       - name: Build Zig statically with musl for ARM64
         run: |
-          export PATH="/opt/musl-cross/bin:$PATH"
+          #export PATH="/opt/musl-cross/bin:$PATH"
           export CC=/opt/musl-cross/aarch64-linux-musl/bin/aarch64-linux-musl-gcc
           export CXX=/opt/musl-cross/aarch64-linux-musl/bin/aarch64-linux-musl-g++
 
@@ -41,8 +42,8 @@ jobs:
           cmake .. \
             -DCMAKE_SYSTEM_NAME=Linux \
             -DCMAKE_SYSTEM_PROCESSOR=aarch64 \
-            -DCMAKE_C_COMPILER=aarch64-linux-musl-gcc \
-            -DCMAKE_CXX_COMPILER=aarch64-linux-musl-g++ \
+            -DCMAKE_C_COMPILER=${CC} \
+            -DCMAKE_CXX_COMPILER=${CXX} \
             -DCMAKE_EXE_LINKER_FLAGS="-static" \
             -DZIG_STATIC=ON \
             -DCMAKE_BUILD_TYPE=Release
