--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -12,46 +12,44 @@ jobs:
           sudo apt update
           sudo apt install -y \
             git cmake ninja-build python3 \
-            build-essential curl musl-tools \
-            g++-aarch64-linux-gnu tree
+            build-essential curl \
+            patchelf
 
-      - name: Checkout Zig
-        uses: actions/checkout@v4
-        with:
-          repository: ziglang/zig
-          ref: 0.14.1
-
-      - name: Clone musl-cross-make
+      - name: Download musl-cross toolchain (aarch64-linux-musl)
         run: |
-          git clone https://github.com/richfelker/musl-cross-make.git
-          cd musl-cross-make
-          echo "TARGET = aarch64-linux-musl" > config.mak
-          echo "OUTPUT = /opt/musl-cross" >> config.mak
-          make -j$(nproc)
-          echo "/opt/musl-cross/bin" >> $GITHUB_PATH
-          
+          curl -LO https://musl.cc/aarch64-linux-musl-cross.tgz
+          tar -xf aarch64-linux-musl-cross.tgz
+          echo "$PWD/aarch64-linux-musl-cross/bin" >> $GITHUB_PATH
 
-      - name: Build Zig statically with musl for ARM64
+      - name: Checkout Zig 0.14.1
         run: |
-          tree -a /opt/musl-cross
-          #export PATH="/opt/musl-cross/bin:$PATH"
-          export CC=/opt/musl-cross/aarch64-linux-musl/bin/aarch64-linux-musl-gcc
-          export CXX=/opt/musl-cross/aarch64-linux-musl/bin/aarch64-linux-musl-g++
-
+          git clone --branch 0.14.1 --depth 1 https://github.com/ziglang/zig
+          cd zig
           mkdir build
-          cd build
+
+      - name: Build Zig for aarch64-musl
+        working-directory: ./zig/build
+        run: |
           cmake .. \
             -DCMAKE_SYSTEM_NAME=Linux \
             -DCMAKE_SYSTEM_PROCESSOR=aarch64 \
-            -DCMAKE_C_COMPILER=${CC} \
-            -DCMAKE_CXX_COMPILER=${CXX} \
+            -DCMAKE_C_COMPILER=aarch64-linux-musl-gcc \
+            -DCMAKE_CXX_COMPILER=aarch64-linux-musl-g++ \
             -DCMAKE_EXE_LINKER_FLAGS="-static" \
+            -DCMAKE_BUILD_TYPE=Release \
             -DZIG_STATIC=ON \
-            -DCMAKE_BUILD_TYPE=Release
+            -DZIG_USE_CCACHE=OFF
           ninja
 
-      - name: Upload Zig Binary
+      - name: Package zig binary
+        run: |
+          cd zig/build
+          mkdir zig-aarch64
+          cp zig zig-aarch64/
+          tar -cJf zig-aarch64-linux-musl.tar.xz zig-aarch64
+
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: zig-aarch64-musl
-          path: build/zig
+          name: zig-aarch64-linux-musl
+          path: zig/build/zig-aarch64-linux-musl.tar.xz
