--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -17,9 +17,11 @@ jobs:
 
       - name: Download musl-cross toolchain (aarch64-linux-musl)
         run: |
-          curl -LO https://musl.cc/aarch64-linux-musl-cross.tgz
-          tar -xf aarch64-linux-musl-cross.tgz
-          echo "$PWD/aarch64-linux-musl-cross/bin" >> $GITHUB_PATH
+              curl -L -o aarch64-unknown-linux-musl.tar.xz https://github.com/cross-tools/musl-cross/releases/download/20250520/aarch64-unknown-linux-musl.tar.xz
+              echo "76f0d71893f3864e91ad09feff71a719cdf94cccd4f14cc25d7deed395968b5b5b790099e49bf89756f612b  aarch64-unknown-linux-musl.tar.xz" \
+                      | sha256sum -c -
+              tar -xf aarch64-unknown-linux-musl.tar.xz
+              echo "$PWD/aarch64-unknown-linux-musl/bin" >> $GITHUB_PATH
 
       - name: Checkout Zig 0.14.1
         run: |
