--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -13,7 +13,7 @@ jobs:
           sudo apt install -y \
             git cmake ninja-build python3 \
             build-essential curl \
-            patchelf
+            patchelf tree
 
       - name: Download musl-cross toolchain (aarch64-linux-musl)
         run: |
@@ -23,6 +23,9 @@ jobs:
               #sha256sum -c checksum.sha256
               tar -xf aarch64-unknown-linux-musl.tar.xz
               echo "$PWD/aarch64-unknown-linux-musl/bin" >> $GITHUB_PATH
+              echo "$PWD/aarch64-unknown-linux-musl/bin" >> $GITHUB_ENV
+     
+              tree -a .
 
       - name: Checkout Zig 0.14.1
         run: |
