--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -26,6 +26,13 @@ jobs:
               #echo "$PWD/aarch64-unknown-linux-musl/bin" >> $GITHUB_ENV
      
               #tree -a .
+      
+      - name: Install LLVM
+        run: |
+            sudo apt update
+            sudo apt install -y llvm-15 clang-15 lld-15
+            echo "/usr/lib/llvm-15/bin" >> "$GITHUB_PATH"
+            which llvm-config
 
       - name: Checkout Zig 0.14.1
         run: |
