--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install LLVM
         run: |
             sudo apt update
-            sudo apt install -y llvm-19 clang-19 lld-19
+            sudo apt install -y llvm-19 clang-19 lld-19 libclang-19-dev liblld-19 liblld-19-dev
             echo "/usr/lib/llvm-15/bin" >> $GITHUB_PATH
             #which llvm-config
 
