--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -13,33 +13,47 @@ jobs:
           sudo apt install -y \
             git cmake ninja-build python3 \
             build-essential curl \
-            patchelf tree libz-dev libzstd-dev
+            patchelf tree
 
       - name: Download musl-cross toolchain (aarch64-linux-musl)
         run: |
-              curl -L -o aarch64-unknown-linux-musl.tar.xz https://github.com/cross-tools/musl-cross/releases/download/20250520/aarch64-unknown-linux-musl.tar.xz
-              #echo "76f0d71893f3864e91ad09feff71a719cdf94cccd4f14cc25d7deed395968b5b5b790099e49bf89756f612b  aarch64-unknown-linux-musl.tar.xz" > checksum.sha256
-              #cat checksum.sha256
-              #sha256sum -c checksum.sha256
-              tar -xf aarch64-unknown-linux-musl.tar.xz
-              echo "$PWD/aarch64-unknown-linux-musl/bin" >> $GITHUB_PATH
-              #echo "$PWD/aarch64-unknown-linux-musl/bin" >> $GITHUB_ENV
-              find aarch64-unknown-linux-musl/ -name '*lib*'
+          curl -L -o aarch64-unknown-linux-musl.tar.xz https://github.com/cross-tools/musl-cross/releases/download/20250520/aarch64-unknown-linux-musl.tar.xz
+          tar -xf aarch64-unknown-linux-musl.tar.xz
+          echo "$PWD/aarch64-unknown-linux-musl/bin" >> $GITHUB_PATH
 
-              #tree -a .
-      
       - name: Install LLVM
         run: |
-            sudo apt update
-            sudo apt install -y llvm-19 clang-19 lld-19 libclang-19-dev liblld-19 liblld-19-dev
-            echo "/usr/lib/llvm-15/bin" >> $GITHUB_PATH
-            #which llvm-config
+          sudo apt install -y llvm-19 clang-19 lld-19 libclang-19-dev liblld-19-dev
+          echo "/usr/lib/llvm-19/bin" >> $GITHUB_PATH
+
+      - name: Build zlib (for aarch64-linux-musl)
+        run: |
+          curl -LO https://zlib.net/zlib-1.3.1.tar.gz
+          tar xf zlib-1.3.1.tar.gz
+          cd zlib-1.3.1
+          CC=aarch64-unknown-linux-musl-gcc \
+          CFLAGS="--static" \
+          ./configure --static --prefix=$PWD/../zlib-aarch64
+          make -j$(nproc)
+          make install
+
+      - name: Build zstd (for aarch64-linux-musl)
+        run: |
+          git clone --depth=1 https://github.com/facebook/zstd
+          mkdir -p zstd/build && cd zstd/build
+          cmake .. \
+            -DCMAKE_SYSTEM_NAME=Linux \
+            -DCMAKE_C_COMPILER=aarch64-unknown-linux-musl-gcc \
+            -DCMAKE_INSTALL_PREFIX=$PWD/../../zstd-aarch64 \
+            -DZSTD_BUILD_STATIC=ON \
+            -DZSTD_BUILD_SHARED=OFF
+          make -j$(nproc)
+          make install
 
       - name: Checkout Zig 0.14.1
         run: |
           git clone --branch 0.14.1 --depth 1 https://github.com/ziglang/zig
-          cd zig
-          mkdir build
+          mkdir zig/build
 
       - name: Build Zig for aarch64-musl
         working-directory: ./zig/build
@@ -51,8 +65,11 @@ jobs:
             -DCMAKE_CXX_COMPILER=aarch64-unknown-linux-musl-g++ \
             -DCMAKE_EXE_LINKER_FLAGS="-static" \
             -DCMAKE_BUILD_TYPE=Release \
-            -DZIG_STATIC=ON #\
-            #-DZIG_USE_CCACHE=OFF
+            -DZIG_STATIC=ON \
+            -DZLIB_LIBRARY=$GITHUB_WORKSPACE/zlib-aarch64/lib/libz.a \
+            -DZLIB_INCLUDE_DIR=$GITHUB_WORKSPACE/zlib-aarch64/include \
+            -DZSTD_LIBRARY=$GITHUB_WORKSPACE/zstd-aarch64/lib/libzstd.a \
+            -DZSTD_INCLUDE_DIR=$GITHUB_WORKSPACE/zstd-aarch64/include
           ninja
 
       - name: Package zig binary
