--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -13,18 +13,16 @@ jobs:
           sudo apt install -y \
             git cmake ninja-build python3 \
             build-essential curl \
-            patchelf tree
+            patchelf tree llvm-19 clang-19 lld-19 \
+            libclang-19-dev liblld-19-dev
+
+          echo "/usr/lib/llvm-19/bin" >> $GITHUB_PATH
 
       - name: Download musl-cross toolchain (aarch64-linux-musl)
         run: |
           curl -L -o aarch64-unknown-linux-musl.tar.xz https://github.com/cross-tools/musl-cross/releases/download/20250520/aarch64-unknown-linux-musl.tar.xz
           tar -xf aarch64-unknown-linux-musl.tar.xz
           echo "$PWD/aarch64-unknown-linux-musl/bin" >> $GITHUB_PATH
-
-      - name: Install LLVM
-        run: |
-          sudo apt install -y llvm-19 clang-19 lld-19 libclang-19-dev liblld-19-dev
-          echo "/usr/lib/llvm-19/bin" >> $GITHUB_PATH
 
       - name: Build zlib (for aarch64-linux-musl)
         run: |
@@ -33,18 +31,19 @@ jobs:
           cd zlib-1.3.1
           CC=aarch64-unknown-linux-musl-gcc \
           CFLAGS="--static" \
-          ./configure --static --prefix=$PWD/../zlib-aarch64
+          ./configure --static --prefix=$GITHUB_WORKSPACE/zlib-aarch64
           make -j$(nproc)
           make install
 
       - name: Build zstd (for aarch64-linux-musl)
         run: |
           git clone --depth=1 https://github.com/facebook/zstd
-          mkdir -p zstd/build && cd zstd/build
-          cmake .. \
+          mkdir -p zstd/build_output
+          cd zstd/build/cmake
+          cmake . \
             -DCMAKE_SYSTEM_NAME=Linux \
             -DCMAKE_C_COMPILER=aarch64-unknown-linux-musl-gcc \
-            -DCMAKE_INSTALL_PREFIX=$PWD/../../zstd-aarch64 \
+            -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/zstd-aarch64 \
             -DZSTD_BUILD_STATIC=ON \
             -DZSTD_BUILD_SHARED=OFF
           make -j$(nproc)
