--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -14,7 +14,7 @@ jobs:
             git cmake ninja-build python3 \
             build-essential curl \
             patchelf tree llvm-19 clang-19 lld-19 \
-            libclang-19-dev liblld-19-dev
+            libclang-19-dev liblld-19-dev pkg-config
 
           echo "/usr/lib/llvm-19/bin" >> $GITHUB_PATH
 
@@ -31,7 +31,7 @@ jobs:
           cd zlib-1.3.1
           CC=aarch64-unknown-linux-musl-gcc \
           CFLAGS="--static" \
-          ./configure --static --prefix=$GITHUB_WORKSPACE/zlib-aarch64
+          ./configure --static --prefix=$GITHUB_WORKSPACE/sysroot
           make -j$(nproc)
           make install
 
@@ -40,10 +40,10 @@ jobs:
           git clone --depth=1 https://github.com/facebook/zstd
           mkdir -p zstd/build_output
           cd zstd/build/cmake
-          cmake . \
+          cmake .. \
             -DCMAKE_SYSTEM_NAME=Linux \
             -DCMAKE_C_COMPILER=aarch64-unknown-linux-musl-gcc \
-            -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/zstd-aarch64 \
+            -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/sysroot \
             -DZSTD_BUILD_STATIC=ON \
             -DZSTD_BUILD_SHARED=OFF
           make -j$(nproc)
@@ -56,6 +56,8 @@ jobs:
 
       - name: Build Zig for aarch64-musl
         working-directory: ./zig/build
+        env:
+          PKG_CONFIG_PATH: ${{ github.workspace }}/sysroot/lib/pkgconfig
         run: |
           cmake .. \
             -DCMAKE_SYSTEM_NAME=Linux \
@@ -65,10 +67,8 @@ jobs:
             -DCMAKE_EXE_LINKER_FLAGS="-static" \
             -DCMAKE_BUILD_TYPE=Release \
             -DZIG_STATIC=ON \
-            -DZLIB_LIBRARY=$GITHUB_WORKSPACE/zlib-aarch64/lib/libz.a \
-            -DZLIB_INCLUDE_DIR=$GITHUB_WORKSPACE/zlib-aarch64/include \
-            -DZSTD_LIBRARY=$GITHUB_WORKSPACE/zstd-aarch64/lib/libzstd.a \
-            -DZSTD_INCLUDE_DIR=$GITHUB_WORKSPACE/zstd-aarch64/include
+            -DZIG_STATIC_ZLIB=ON \
+            -DZIG_STATIC_ZSTD=ON
           ninja
 
       - name: Package zig binary
