--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -19,34 +19,35 @@ jobs:
 
           echo "/usr/lib/llvm-19/bin" >> $GITHUB_PATH
 
-      - name: Download musl-cross toolchain (aarch64-linux-musl)
+      - name: Download musl-cross toolchain (aarch64-unknown-linux-musl)
         run: |
           curl -L -o aarch64-unknown-linux-musl.tar.xz https://github.com/cross-tools/musl-cross/releases/download/20250520/aarch64-unknown-linux-musl.tar.xz
           tar -xf aarch64-unknown-linux-musl.tar.xz
           echo "$PWD/aarch64-unknown-linux-musl/bin" >> $GITHUB_PATH
 
-      - name: Build zlib (for aarch64-linux-musl)
+      - name: Build zlib (for aarch64-musl)
         run: |
           curl -LO https://zlib.net/zlib-1.3.1.tar.gz
           tar xf zlib-1.3.1.tar.gz
           cd zlib-1.3.1
           CC=aarch64-unknown-linux-musl-gcc \
-          CFLAGS="--static" \
           ./configure --static --prefix=$GITHUB_WORKSPACE/sysroot
           make -j$(nproc)
           make install
 
-      - name: Build zstd (for aarch64-linux-musl)
+      - name: Build zstd (for aarch64-musl)
         run: |
           git clone --depth=1 https://github.com/facebook/zstd
           mkdir -p zstd/build_output
           cd zstd/build_output
           cmake ../build/cmake \
             -DCMAKE_SYSTEM_NAME=Linux \
+            -DCMAKE_SYSTEM_PROCESSOR=aarch64 \
             -DCMAKE_C_COMPILER=aarch64-unknown-linux-musl-gcc \
             -DCMAKE_INSTALL_PREFIX=$GITHUB_WORKSPACE/sysroot \
             -DZSTD_BUILD_STATIC=ON \
-            -DZSTD_BUILD_SHARED=OFF
+            -DZSTD_BUILD_SHARED=OFF \
+            -DZSTD_BUILD_PROGRAMS=OFF
           make -j$(nproc)
           make install
 
@@ -65,11 +66,8 @@ jobs:
             -DCMAKE_CXX_COMPILER=aarch64-unknown-linux-musl-g++ \
             -DCMAKE_EXE_LINKER_FLAGS="-static" \
             -DCMAKE_BUILD_TYPE=Release \
-            -DZIG_STATIC=ON #\
-            #-DZLIB_LIBRARY=$GITHUB_WORKSPACE/sysroot/lib/libz.a \
-            #-DZLIB_INCLUDE_DIR=$GITHUB_WORKSPACE/sysroot/include \
-            #-DZSTD_LIBRARY=$GITHUB_WORKSPACE/sysroot/lib/libzstd.a \
-            #-DZSTD_INCLUDE_DIR=$GITHUB_WORKSPACE/sysroot/include
+            -DZIG_STATIC=ON \
+            -DCMAKE_PREFIX_PATH=$GITHUB_WORKSPACE/sysroot
           ninja
 
       - name: Package zig binary
