--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Build Zig for aarch64-musl
         working-directory: ./zig/build
         run: |
-          cmake .. \
+          cmake .. -G Ninja \
             -DCMAKE_SYSTEM_NAME=Linux \
             -DCMAKE_SYSTEM_PROCESSOR=aarch64 \
             -DCMAKE_C_COMPILER=aarch64-unknown-linux-musl-gcc \
