--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -15,7 +15,7 @@ jobs:
             git cmake ninja-build python3 \
             build-essential curl \
             patchelf tree llvm-19 clang-19 lld-19 \
-            libclang-19-dev liblld-19-dev libllvm-19-dev
+            libclang-19-dev liblld-19-dev llvm-19-dev
 
           echo "/usr/lib/llvm-19/bin" >> $GITHUB_PATH
 
