--- a/.github/workflows/build-zig.yml
+++ b/.github/workflows/build-zig.yml
@@ -73,7 +73,7 @@ jobs:
             -DCMAKE_BUILD_TYPE=Release \
             -DZIG_STATIC=ON \
             -DCMAKE_PREFIX_PATH=$GITHUB_WORKSPACE/sysroot
-          ninja
+          ninja -v
 
       - name: Package zig binary
         run: |
