--- a/.github/workflows/zig-bootstrap.yml
+++ b/.github/workflows/zig-bootstrap.yml
@@ -17,9 +17,9 @@ jobs:
             g++-aarch64-linux-gnu
 
           # Download musl toolchain
-          mkdir -p /opt/musl
-          curl -L https://musl.cc/aarch64-linux-musl-cross.tgz | tar xz -C /opt/musl
-          echo "PATH=/opt/musl/bin:$PATH" >> $GITHUB_ENV
+          #mkdir -p /opt/musl
+          #curl -L https://musl.cc/aarch64-linux-musl-cross.tgz | tar xz -C /opt/musl
+          #echo "PATH=/opt/musl/bin:$PATH" >> $GITHUB_ENV
 
       - name: Clone zig-bootstrap
         uses: actions/checkout@v4
@@ -30,10 +30,10 @@ jobs:
       - name: Build Zig for aarch64-linux-musl
         working-directory: zig-bootstrap
         env:
-          CC: aarch64-linux-musl-gcc
-          CXX: aarch64-linux-musl-g++
-          AR: aarch64-linux-musl-ar
-          RANLIB: aarch64-linux-musl-ranlib
+          #CC: aarch64-linux-musl-gcc
+          #CXX: aarch64-linux-musl-g++
+          #AR: aarch64-linux-musl-ar
+          #RANLIB: aarch64-linux-musl-ranlib
           TARGET_TRIPLE: aarch64-linux-musl
         run: |
           ./build aarch64-linux-musl
